--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: false
 language: c
 addons.apt.packages:
   - fuse
+  - libfuse2
   - libfuse-dev
 before_script:
   - git clone git://github.com/gittup/tup.git
