--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ dist: precise
 sudo: required
 language: c
 
-addons.apt.packages:
-  - libsdl1.2-dev
+addons:
+  apt:
+    packages:
+    - libsdl1.2-dev
 
 before_install:
   - sudo add-apt-repository ppa:anatol/tup -y
