--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 before_script:
   - cd tupconf
   - lua travisconf.lua travis.config
+  - cat travis.config
   
 script:
   - tup variant tupconf/travis.config
