--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ before_install:
   - git clone https://github.com/gittup/tup.git
   - cd tup
   - ./bootstrap.sh
+  - ./tup
   - alias tup='$HOME/tup/tup'
+  - cd $TRAVIS_BUILD_DIR
 
 script:
   - ( cd tupconf && lua travisconf.lua travis.config )
